Fix box-shadow elevation issue; add z-index

--- a/src/components/pages/ProductPage.style.scss
+++ b/src/components/pages/ProductPage.style.scss
@@ -42,6 +42,7 @@ canvas {
 .canvas-container {
   width: 50%;
   height: 100%;
+  z-index: 1;
   position: relative;
 
   box-shadow: 0 0 0.5rem 0.1rem rgb(90, 90, 90);
